networks/web-pod.yml
apiVersion: v1
kind: Pod
metadata:
      name: web
      
spec:
      containers:
      - name: web
        image: avtandilko/web:1.0
        livenessProbe:
          tcpSocket:
            port: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        volumeMounts:
          - name: app
            mountPath: /app
      volumes:
        - name: app
          emptyDir: {}
