networks/dashboard-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc-lb
  namespace: kubernetes-dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
