networks/dns-svc-lb-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-dns-lb-tcp
  namespace: kube-system
  annotations:
    metallb.universe.tf/allow-shared-ip: kube-dns-shared
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  loadBalancerIP: 172.18.255.2
  ports:
  - name: tcp53
    port: 53
    protocol: TCP
    targetPort: 53
